<resources>
    <string name="app_name">Fitness</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_"><u>Login</u></string>
    <string name="sign_up_"><u>Sign Up</u></string>

    <string name="confirm_password">Re-enter Password</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="tracker">Tracker</string>
    <string name="search">Search</string>
    <string name="meal">Meal</string>
    <string name="food_information">Food Information</string>
    <string name="favorites">Favorites</string>
    <string name="no_account_title">Don\'t have an account?</string>
    <string name="food_image">Food Image</string>
    <string name="search_product">Search product</string>
    <string name="second">Second</string>
    <string name="minute">Minute</string>
    <string name="hour">Hour</string>
    <string name="time">Time</string>
    <string name="permission_decline_message">Please grant permission from settings</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="resume">Resume</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="try_again">Try again</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="avg_speed">Avg. Speed</string>
    <string name="calories">Calories</string>
    <string name="distance">Distance</string>
</resources>