<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.map.LocationTrackerFragment">


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="-15dp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/shape_map_info_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.35" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:text="@string/time"
        android:textColor="@color/bright_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvStopwatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:letterSpacing="0.12"
        android:padding="10dp"
        android:text="@string/_00_00_00"
        android:textColor="@color/bright_gray"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toBottomOf="@+id/tvTime"
        tools:text="01:28:29" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/hour"
        android:textColor="@color/color_gray"
        app:layout_constraintEnd_toStartOf="@+id/tvMinute"
        app:layout_constraintStart_toStartOf="@+id/tvStopwatch"
        app:layout_constraintTop_toBottomOf="@+id/tvStopwatch" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMinute"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/minute"
        android:textColor="@color/color_gray"
        app:layout_constraintEnd_toStartOf="@+id/tvSecond"
        app:layout_constraintStart_toEndOf="@+id/tvHour"
        app:layout_constraintTop_toBottomOf="@+id/tvStopwatch" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSecond"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/second"
        android:textColor="@color/color_gray"
        app:layout_constraintEnd_toEndOf="@+id/tvStopwatch"
        app:layout_constraintStart_toEndOf="@+id/tvMinute"
        app:layout_constraintTop_toBottomOf="@+id/tvStopwatch" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="150dp"
        app:cardElevation="3dp"
        app:layout_constraintBottom_toBottomOf="@id/view"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view">

        <TextView
            android:id="@+id/tvStart"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/start"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:cardBackgroundColor="@color/bright_gray"
        app:cardCornerRadius="150dp"
        app:cardElevation="3dp"
        app:layout_constraintBottom_toBottomOf="@id/view"
        app:layout_constraintEnd_toStartOf="@+id/cvPause"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toBottomOf="@+id/tvStopwatch">

        <TextView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/stop"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:cardBackgroundColor="@color/bright_gray"
        app:cardCornerRadius="150dp"
        app:cardElevation="3dp"
        app:layout_constraintBottom_toBottomOf="@id/view"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toEndOf="@id/cvStop"
        app:layout_constraintTop_toBottomOf="@+id/tvStopwatch">

        <TextView
            android:id="@+id/tvPause"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/pause"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>